# py-tiff-merger

./: .gitignore  A0000001.tiff  A0000002.tiff  README.md  main.py  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
